--- a/new_port_2024-master/public_html/index.html
+++ b/new_port_2024-master/public_html/index.html
@@ -138,7 +138,7 @@
                         <div class="body">
                             <img src="assets/imgs/toolbox.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
                             <h6 class="title">Placeat</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam molestias dol Pefectionsit, startesgist, influential, visionary, Original.</p>
+                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in namolestias dol Pefectionsit, startesgist, influential, visionary, Original okfog l; ijufidkgj ok ] ij  idgsg .</p>
                         </div>
                     </div>
                 </div>
@@ -428,3 +428,10 @@
 
 </body>
 </html>
+
+
+
+
+
+ye kya bakchodi hoe rhi hamburger-inner j k th esdh oi  dfp vb  th e o  dgfj  pohrg 
+ r  fij  fgh the  ghpo  _ fgn p; htrho  The k 
