--- a/new_port_2024-master/public_html/index.html
+++ b/new_port_2024-master/public_html/index.html
@@ -21,7 +21,7 @@
                 <li class="item">
                     <a class="link" href="#home">Home</a>
                 </li>
-                <li class="item">
+                <li class="item">  gbgddfgdfgf
                     <a class="link" href="#about">About</a>
                 </li>
                 <li class="item">
@@ -33,7 +33,8 @@
                 <li class="item">
                     <a class="link" href="#blog">Blog</a>
                 </li>
-                <li class="item">
+                <li class="item"> the  i  poweu  sdfkkjm  oe   the form th ih  ungefrg 
+                     i  uuyh  ih 
                     <a class="link" href="#contact">Contact</a>
                 </li>
                 <li class="item ml-md-3">
@@ -56,7 +57,7 @@
                 <span class="up">Hi!</span>
                 <span class="down">my name is <br>Ahmar Ali khan</span>
             </h1>
-            <p class="header-subtitle">A front-end engineer & designer</p>            
+            <p class="header-subtitle">A front-end engi e hbtgh e kkedf  yuh  f neer & designer</p>            
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>              
@@ -64,8 +65,8 @@
 
     <!-- about section -->
     <section class="section pt-0" id="about">
-        <!-- container -->
-        <div class="container text-center">
+        <!-- container --> 
+        <div class="containger text-center">
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
@@ -147,7 +148,7 @@
                         <div class="body">
                             <img src="assets/imgs/analytics.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Lan" class="icon">
                             <h6 class="title">Iusto</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam molestias dolorem iste quod.</p>
+                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam molestias dolorem iste qu.</p>
                         </div>
                     </div>
                 </div>
