--- a/new_port_2024-master/public_html/index.html
+++ b/new_port_2024-master/public_html/index.html
@@ -148,7 +148,7 @@
                         <div class="body">
                             <img src="assets/imgs/analytics.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Lan" class="icon">
                             <h6 class="title">Iusto</h6>
-                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam molestias dolo.</p>
+                            <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam molestias dol.</p>
                         </div>
                     </div>
                 </div>
