--- a/new_port_2024-master/public_html/index.html
+++ b/new_port_2024-master/public_html/index.html
@@ -57,7 +57,7 @@
                 <span class="up">Hi!</span>
                 <span class="down">my name is <br>Ahmar Ali khan</span>
             </h1>
-            <p class="header-subtitle">A front-end engi e hbtgh e kkedf  yuh  f neer & designer</p>            
+            <p class="header-subtitle">A front-end engi e hbtgh e kkedf  yuneer & designer</p>            
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>              
